--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -24,6 +24,12 @@ html(lang='ru')
 
     //include ../blocks/groups.pug
 
+    .icon-events(style="color: #000 !important;")
+    .icon-events(style="color: #000 !important;")
+
+    p
+      | 123
+
     // scripts
 
     script(src='../js/jquery-3.2.1.min.js')
