--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -16,4 +16,23 @@
 @desktop: 1100px;
 @mobile: 320px;
 
+// icons
+
+@icomoon-font-family: "bananas";
+@icomoon-font-path: "fonts";
+
+@icon-arrow: "\e900";
+@icon-events: "\e901";
+@icon-festivals: "\e902";
+@icon-foodtruck: "\e903";
+@icon-hospitality: "\e904";
+@icon-instoreactivation: "\e905";
+@icon-merchandising: "\e906";
+@icon-mia: "\e907";
+@icon-ontraid: "\e908";
+@icon-photo-activation: "\e909";
+@icon-plus: "\e90a";
+@icon-popup: "\e90b";
+@icon-sampling: "\e90c";
+
 // other variables
