added svg icon fonts

--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -27,6 +27,9 @@ html(lang='ru')
     .icon-events(style="color: #000 !important;")
     .icon-events(style="color: #000 !important;")
 
+    .icon-arrow
+    .icon.icon-events
+
     p
       | 123
 
