--- a/dev/styles/fonts.css
+++ b/dev/styles/fonts.css
@@ -1,14 +1,14 @@
 @import '../styles/helpers/variables.less';
 
 @font-face {
-    font-family: '@{icomoon-font-family}';
-    src:  url('./fonts/@{icomoon-font-path}/@{icomoon-font-family}.eot?vdp0xh');
-    src:  url('./fonts/@{icomoon-font-path}/@{icomoon-font-family}.eot?vdp0xh#iefix') format('embedded-opentype'),
-      url('./fonts/@{icomoon-font-path}/@{icomoon-font-family}.ttf?vdp0xh') format('truetype'),
-      url('./fonts/@{icomoon-font-path}/@{icomoon-font-family}.woff?vdp0xh') format('woff'),
-      url('./fonts/@{icomoon-font-path}/@{icomoon-font-family}.svg?vdp0xh#@{icomoon-font-family}') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'bananas';
+  src:  url('../fonts/bananas.eot?vzoioz');
+  src:  url('../fonts/bananas.eot?vzoioz#iefix') format('embedded-opentype'),
+    url('../fonts/bananas.ttf?vzoioz') format('truetype'),
+    url('../fonts/bananas.woff?vzoioz') format('woff'),
+    url('../fonts/bananas.svg?vzoioz#bananas') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
