--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -11,6 +11,8 @@
 
 // SETTINGS //
 
+// svg icons
+
 .icon {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: '@{icomoon-font-family}' !important;
