added main slider

--- a/dev/styles/fonts.css
+++ b/dev/styles/fonts.css
@@ -296,3 +296,12 @@
 	font-weight: normal;
 	font-style: italic;
 }
+
+@font-face {
+  font-family: 'Graphik';
+  src: url('../fonts/Graphik-Regular.woff2') format('woff2'),
+      url('../fonts/Graphik-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
