--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -11,9 +11,13 @@
 @green-light: #abc04f;
 @green: #80a535;
 
+@yellow: #FFED00;
+
+@grey-light: #6e6d6d;
+
 // sizes page
 
-@desktop: 1100px;
+@desktop: 1400px;
 @mobile: 320px;
 
 // icons
