--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -11,6 +11,11 @@
 
 // SETTINGS //
 
+h2, p {
+  margin: 0;
+  padding: 0;
+}
+
 // svg icons
 
 .icon {
@@ -126,6 +131,14 @@ a {
 
 p {
   font: 16px 'Intro Bold';
+}
+
+// container
+
+.container {
+  position: relative;
+  margin: 0 auto !important;
+  width: 1366px;
 }
 
 @media only screen and (min-width : @mobile) and  (max-width : @desktop) {
