--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -9,7 +9,7 @@ html(lang='ru')
     //link(rel="icon" type="image/png" href="../img/favicons/32x32.png" sizes="32x32")
     //link(rel="icon" type="image/png" href="../img/favicons/96x96.png" sizes="96x96")
     title Page
-    link(rel='stylesheet', href='../styles/bootstrap.css')
+    //link(rel='stylesheet', href='../styles/bootstrap.css')
     link(rel='stylesheet', href='../styles/normalize.css')
     link(rel='stylesheet', href='../styles/style.css')
 
@@ -20,22 +20,16 @@ html(lang='ru')
     //script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
   body
 
-    // groups
+    // main slider
 
-    //include ../blocks/groups.pug
+    include ../blocks/main-slider/main-slider.pug
 
-    .icon-events(style="color: #000 !important;")
-    .icon-events(style="color: #000 !important;")
-
-    .icon-arrow
-    .icon.icon-events
-
-    p
-      | 123
+    // /main slider
 
     // scripts
 
     script(src='../js/jquery-3.2.1.min.js')
+    script(src='../js/responsiveslides.min.js')
     script(src='../js/jquery.bpopup.min.js')
     script(src='../js/scripts.js')
 
