fixed main slider, header

--- a/dev/blocks/main-slider/main-slider.less
+++ b/dev/blocks/main-slider/main-slider.less
@@ -5,11 +5,12 @@
     position: relative;
     height: 800px;
     overflow: hidden;
-    background: #000;
+    background: #000 url('../img/slide-1.png') no-repeat center;
+    background-size: cover;
 }
 
 .main-slider__container {
-    width: 100%;
+    width: 1366px;
     position: relative;
     height: 800px;
     overflow: hidden;
@@ -32,7 +33,7 @@
 
 .main-slider__container__mask {
     margin: 280px 0 0 0;
-    position: absolute;
+    //position: absolute;
     width: 100%;
     height: auto;
     text-align: center;
@@ -89,7 +90,7 @@
 
 	ul.rslides1_tabs {
         position: absolute;
-        left: 16%;
+        //left: 16%;
 		margin: -30px 0 0 0;
 		width: 170px;
         height: 6px;
