--- a/dev/blocks/main-slider/main-slider.pug
+++ b/dev/blocks/main-slider/main-slider.pug
@@ -1,7 +1,5 @@
 .main-slider
 
-        // main slider container
-
         .scroll-down-container
 
             .container
@@ -13,35 +11,38 @@
                     p
                         | Scroll down
 
-        ul.main-slider__container
+        // main slider container
 
-            // item
+        .container
 
-            li
-                // mask
-                .main-slider__container__mask
-                    h2
-                        | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
-                    p
-                        | We forge connections between brand and people.
-                img(src="../img/slide-1.jpg" alt="@@")
-            // item
+            ul.main-slider__container
 
-            li
-                // mask
-                .main-slider__container__mask
-                    h2
-                        | Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem
-                    p
-                        | Description
-                img(src="../img/slide-1.jpg" alt="@@")
-            // item
+                // item
 
-            li
-                // mask
-                .main-slider__container__mask
-                    h2
-                        | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
-                    p
-                        | We forge connections between brand and people.
-                img(src="../img/slide-1.jpg" alt="@@")
+                li
+                    // mask
+                    .main-slider__container__mask
+                        h2
+                            | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
+                        p
+                            | We forge connections between brand and people.
+
+                // item
+
+                li
+                    // mask
+                    .main-slider__container__mask
+                        h2
+                            | Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem
+                        p
+                            | Description
+
+                // item
+
+                li
+                    // mask
+                    .main-slider__container__mask
+                        h2
+                            | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
+                        p
+                            | We forge connections between brand and people.
