--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -3,17 +3,16 @@
 // colors
 
 @white: #fff;
-
 @black: #000;
-
-@grey-dark: #282828;
-
 @green-light: #abc04f;
 @green: #80a535;
+
+// dsfsd
 
 @yellow: #FFED00;
 
 @grey-light: #6e6d6d;
+@grey-dark: #282828;
 
 // sizes page
 
