--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -138,7 +138,7 @@ p {
 .container {
   position: relative;
   margin: 0 auto !important;
-  width: 1366px;
+  width: 1366px !important;
 }
 
 @media only screen and (min-width : @mobile) and  (max-width : @desktop) {
