--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -20,11 +20,19 @@ html(lang='ru')
     //script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
   body
 
+    // header
+
+    include ../blocks/header/header.pug
+
+    // /header
+
     // main slider
 
     include ../blocks/main-slider/main-slider.pug
 
     // /main slider
+
+    .container(style="height: 90vh;")
 
     // scripts
 
