--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -86,17 +86,71 @@ p {
 .container {
   position: relative;
   margin: 0 auto !important;
-  width: 1366px;
+  width: 1366px !important;
+}
+.header {
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  background: #000;
+  z-index: 13;
+}
+.logo {
+  position: absolute;
+  margin-top: 76px;
+  margin-left: 48px;
+  width: 50px;
+  z-index: 14;
+}
+.logo img {
+  display: block;
+  width: 46px;
+  height: 57px;
+}
+.header__logo-space {
+  float: left;
+  width: 140px;
+  height: 80px;
+  background: #fff;
+}
+.header__nav-space {
+  margin-left: 140px;
+  position: absolute;
+  width: 100vw;
+  height: 80px;
+  z-index: 19;
+  background: #f00;
+}
+.header__nav {
+  height: 80px;
+}
+.header__nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-left: 80px;
+}
+.header__nav ul li a,
+.header__nav ul li a:hover {
+  display: block;
+  float: left;
+  height: 80px;
+  font: 14px 'Intro';
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  line-height: 80px;
 }
 .main-slider {
   width: 100%;
   position: relative;
   height: 800px;
   overflow: hidden;
-  background: #000;
+  background: #000 url('../img/slide-1.png') no-repeat center;
+  background-size: cover;
 }
 .main-slider__container {
-  width: 100%;
+  width: 1366px;
   position: relative;
   height: 800px;
   overflow: hidden;
@@ -115,7 +169,6 @@ p {
 }
 .main-slider__container__mask {
   margin: 280px 0 0 0;
-  position: absolute;
   width: 100%;
   height: auto;
   text-align: center;
@@ -159,7 +212,6 @@ p {
 }
 ul.rslides1_tabs {
   position: absolute;
-  left: 16%;
   margin: -30px 0 0 0;
   width: 170px;
   height: 6px;
