--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -17,14 +17,18 @@ header.header
 
         .header__nav-space
 
-            // navigation
+            // nav btn space
 
-            nav.header__nav
-                ul
-                    li: a(href="#" title="") Home
-                    li: a(href="#" title="") Services
-                    li: a(href="#" title="") Cases
-                    li: a(href="#" title="") News
-                    li: a(href="#" title="") About us
-                    li: a(href="#" title="") Jobs
-                    li: a(href="#" title="") Contact
+            .header__nav-button-space
+
+                // navigation
+
+                nav.header__nav
+                    ul
+                        li: a(href="#" title="") Home
+                        li: a(href="#" title="") Services
+                        li: a(href="#" title="") Cases
+                        li: a(href="#" title="") News
+                        li: a(href="#" title="") About us
+                        li: a(href="#" title="") Jobs
+                        li: a(href="#" title="") Contact
