--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -7,12 +7,13 @@
 @green-light: #abc04f;
 @green: #80a535;
 
-// dsfsd
+// true colors
 
 @yellow: #FFED00;
 
 @grey-light: #6e6d6d;
 @grey-dark: #282828;
+@dark: #2d2a26;
 
 // sizes page
 
