--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -5,7 +5,6 @@ p {
   padding: 0;
 }
 .icon {
-  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'bananas' !important;
   speak: none;
   font-style: normal;
@@ -13,7 +12,6 @@ p {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -92,7 +90,6 @@ p {
   position: absolute;
   width: 100%;
   height: 80px;
-  background: #000;
   z-index: 13;
 }
 .logo {
@@ -109,17 +106,22 @@ p {
 }
 .header__logo-space {
   float: left;
-  width: 140px;
+  width: 110px;
   height: 80px;
-  background: #fff;
+}
+.header__nav-button-space {
+  float: left;
+  width: 1256px;
 }
 .header__nav-space {
-  margin-left: 140px;
+  margin-left: 110px;
   position: absolute;
   width: 100vw;
   height: 80px;
   z-index: 19;
-  background: #f00;
+  background: #2d2a26;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
 }
 .header__nav {
   height: 80px;
@@ -168,7 +170,7 @@ p {
   display: block;
 }
 .main-slider__container__mask {
-  margin: 280px 0 0 0;
+  margin: 290px 0 0 0;
   width: 100%;
   height: auto;
   text-align: center;
