--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -19,7 +19,6 @@ h2, p {
 // svg icons
 
 .icon {
-  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: '@{icomoon-font-family}' !important;
   speak: none;
   font-style: normal;
@@ -28,7 +27,6 @@ h2, p {
   text-transform: none;
   line-height: 1;
 
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -139,6 +137,7 @@ p {
   position: relative;
   margin: 0 auto !important;
   width: 1366px !important;
+  //background: #f00;
 }
 
 @media only screen and (min-width : @mobile) and  (max-width : @desktop) {
