--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -21,11 +21,15 @@ header.header
 
             .header__nav-button-space
 
+                // button
+
+                a.button.button-grey.header__nav-button-space__promo(href="#" title="")
+
                 // navigation
 
                 nav.header__nav
                     ul
-                        li: a(href="#" title="") Home
+                        li: a.nav-active(href="#" title="") Home
                         li: a(href="#" title="") Services
                         li: a(href="#" title="") Cases
                         li: a(href="#" title="") News
