--- a/dev/blocks/main-slider/main-slider.pug
+++ b/dev/blocks/main-slider/main-slider.pug
@@ -33,9 +33,9 @@
                     // mask
                     .main-slider__container__mask
                         h2
-                            | Lorem ipsum dorem<br/>Dorem Dorem</br>Lorem
+                            | Lorem ipsum dolor sit amet,<br/>consectetur adipiscing</br>elit
                         p
-                            | Description
+                            | Donec vestibulum enim ac eros luctus scelerisque.
 
                 // item
 
@@ -43,6 +43,6 @@
                     // mask
                     .main-slider__container__mask
                         h2
-                            | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
+                            | Curabitur<br/>tincidunt rutrum<br/>libero
                         p
-                            | We forge connections between brand and people.
+                            | Suspendisse ut consectetur sapien.
