--- a/dev/blocks/header/header.less
+++ b/dev/blocks/header/header.less
@@ -4,11 +4,10 @@
     position: absolute;
     width: 100%;
     height: 80px;
-    //background: #000;
     z-index: 13;
 }
 
-// logo
+// logotype
 
 .logo {
     position: absolute;
@@ -41,6 +40,8 @@
     width: 1256px;
 }
 
+// nav background
+
 .header__nav-space {
     margin-left: 110px;
     position: absolute;
@@ -52,7 +53,11 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
 }
 
+// nav container
+
 .header__nav {
+    float: right;
+    width: 800px;
     height: 80px;
     
     ul {
@@ -62,15 +67,71 @@
         padding-left: 80px;
 
         li a, li a:hover {
+            padding: 0 47px 0 43px;
+            margin-right: -48px;
             display: block;
             float: left;
             height: 80px;
 
             font: 14px 'Intro';
+            //font-weight: bold;
             text-transform: uppercase;
             color: @white;
             text-decoration: none;
             line-height: 80px;
+
+            -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+            clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+
+            &:hover {
+                color: @yellow;
+            }
+        }
+    }
+}
+
+.nav-active {
+    -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+    clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+    color: @dark !important;
+    background: @yellow;
+    font-weight: bold !important;
+}
+
+.header__nav-button-space__promo {
+    margin-top: 16px;
+    float: right;
+
+    width: 192px;
+    height: 46px;
+    background: @yellow;
+    -webkit-clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+    clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+
+    &:before {
+        position: absolute;
+        margin: 1px 1px 1px 1px;
+        display: block;
+        width: 190px;
+        height: 44px;
+        background: @dark;
+        content: "Promo portal";
+        -webkit-clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
+        clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
+        
+        font: 14px 'Intro';
+        //font-weight: bold;
+        color: @yellow;
+        text-align: center;
+        line-height: 45px;
+        text-transform: uppercase;
+    }
+
+    &:hover {
+
+        &:before {
+            color: @dark;
+            background: @yellow;
         }
     }
 }
