--- a/dev/blocks/main-slider/main-slider.less
+++ b/dev/blocks/main-slider/main-slider.less
@@ -53,8 +53,10 @@
 
 }
 
+ // scroll down
+
 .scroll-down {
-    right: 0;
+    right: -23px;
     height: 14px;
     transform: rotate(-90deg);
     position: absolute;
@@ -77,6 +79,8 @@
 
 }
 
+// scroll down container
+
 .scroll-down-container {
     bottom: 0;
     height: 90px;
@@ -86,56 +90,56 @@
     //background: #000;
 }
 
-	// main slider
+// main slider
 
-	ul.rslides1_tabs {
-        position: absolute;
-        //left: 16%;
-		margin: -30px 0 0 0;
-		width: 170px;
-        height: 6px;
-        z-index: 11;
-        list-style: none;
+ul.rslides1_tabs {
+    position: absolute;
+    //left: 16%;
+	margin: -30px 0 0 0;
+	width: 170px;
+    height: 6px;
+    z-index: 11;
+    list-style: none;
 
-		li {
-			margin-right: 10px;
-			float: left;
+	li {
+		margin-right: 10px;
+		float: left;
+		width: 45px;
+		height: 6px;
+		background: @grey-light;
+        -webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
+        clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
+
+		a, a:hover {
+			//margin: 3px 3px;
+			display: block;
 			width: 45px;
 			height: 6px;
-			background: @grey-light;
-            -webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
-            clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
-
-			a, a:hover {
-				//margin: 3px 3px;
-				display: block;
-				width: 45px;
-				height: 6px;
-				background: 0;
-				//border-radius: 5px;
-				text-indent: -999999px;
-				overflow: hidden;
-			}
-
-		}
-
-		.rslides_here {
-			float: left;
-			//width: 45px;
-			//height: 6px;
-			//border: 4px solid @green;
-			//border-radius: 10px;
-
-			a, a:hover {
-				//margin: 3px 3px;
-				display: block;
-				width: 45px;
-				height: 6px;
-				background: @yellow;
-				//border-radius: 5px;
-				text-indent: -999999px;
-				overflow: hidden;
-			}
+			background: 0;
+			//border-radius: 5px;
+			text-indent: -999999px;
+			overflow: hidden;
 		}
 
 	}
+
+	.rslides_here {
+		float: left;
+		//width: 45px;
+		//height: 6px;
+		//border: 4px solid @green;
+		//border-radius: 10px;
+
+		a, a:hover {
+			//margin: 3px 3px;
+			display: block;
+			width: 45px;
+			height: 6px;
+			background: @yellow;
+			//border-radius: 5px;
+			text-indent: -999999px;
+			overflow: hidden;
+		}
+	}
+
+}
