--- a/dev/blocks/main-slider/main-slider.pug
+++ b/dev/blocks/main-slider/main-slider.pug
@@ -7,9 +7,10 @@
                 // scroll down
 
                 .scroll-down
-                    span
-                    p
-                        | Scroll down
+                    .scroll-down__element.scroll-down_animated
+                        span
+                        p
+                            | Scroll down
 
         // main slider container
 
