--- a/dev/blocks/header/header.less
+++ b/dev/blocks/header/header.less
@@ -1,10 +1,23 @@
 // header
 
 .header {
-    position: absolute;
+    top: 0;
+    position: fixed;
     width: 100%;
     height: 80px;
     z-index: 13;
+}
+
+.header_fixed {
+    position: fixed;
+    top: 0;
+    background: @dark;
+}
+
+.header_absolute {
+    position: fixed;
+    top: 0;
+    background: @dark;
 }
 
 // logotype
@@ -24,7 +37,15 @@
     }
 }
 
-// logo
+//.header__logo_fixed {
+
+//}
+
+.header__logo-to-scroll {
+    margin-top: 12px !important;
+}
+
+// logo space
 
 .header__logo-space {
     float: left;
