--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -37,6 +37,7 @@ html(lang='ru')
     // scripts
 
     script(src='../js/jquery-3.2.1.min.js')
+    script(src='../js/jquery-ui.min.js')
     script(src='../js/responsiveslides.min.js')
     script(src='../js/jquery.bpopup.min.js')
     script(src='../js/scripts.js')
