--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -69,7 +69,8 @@ p {
 }
 a,
 a:hover,
-.header__nav-button-space__promo:before {
+.header__nav-button-space__promo:before,
+.header {
   transition: all 0.5s ease-in-out !important;
 }
 body {
@@ -101,6 +102,123 @@ body *::-webkit-selection {
 body *::selection {
   background: #FFED00;
   color: #2d2a26;
+}
+.header {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  z-index: 13;
+}
+.header_fixed {
+  position: fixed;
+  top: 0;
+  background: #2d2a26;
+}
+.header_absolute {
+  position: fixed;
+  top: 0;
+  background: #2d2a26;
+}
+.logo {
+  position: absolute;
+  margin-top: 76px;
+  margin-left: 48px;
+  width: 50px;
+  z-index: 14;
+}
+.logo img {
+  display: block;
+  width: 46px;
+  height: 57px;
+}
+.header__logo-to-scroll {
+  margin-top: 12px !important;
+}
+.header__logo-space {
+  float: left;
+  width: 110px;
+  height: 80px;
+}
+.header__nav-button-space {
+  float: left;
+  width: 1256px;
+}
+.header__nav-space {
+  margin-left: 110px;
+  position: absolute;
+  width: 100vw;
+  height: 80px;
+  z-index: 19;
+  background: #2d2a26;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
+}
+.header__nav {
+  float: right;
+  width: 800px;
+  height: 80px;
+}
+.header__nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  padding-left: 80px;
+}
+.header__nav ul li a,
+.header__nav ul li a:hover {
+  padding: 0 47px 0 43px;
+  margin-right: -48px;
+  display: block;
+  float: left;
+  height: 80px;
+  font: 14px 'Intro';
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  line-height: 80px;
+  -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+  clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+}
+.header__nav ul li a:hover,
+.header__nav ul li a:hover:hover {
+  color: #FFED00;
+}
+.nav-active {
+  -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+  clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
+  color: #2d2a26 !important;
+  background: #FFED00;
+  font-weight: bold !important;
+}
+.header__nav-button-space__promo {
+  margin-top: 16px;
+  float: right;
+  width: 192px;
+  height: 46px;
+  background: #FFED00;
+  -webkit-clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+  clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
+}
+.header__nav-button-space__promo:before {
+  position: absolute;
+  margin: 1px 1px 1px 1px;
+  display: block;
+  width: 190px;
+  height: 44px;
+  background: #2d2a26;
+  content: "Promo portal";
+  -webkit-clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
+  clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
+  font: 14px 'Intro';
+  color: #FFED00;
+  text-align: center;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+.header__nav-button-space__promo:hover:before {
+  color: #2d2a26;
+  background: #FFED00;
 }
 .main-slider {
   width: 100%;
@@ -232,109 +350,6 @@ ul.rslides1_tabs .rslides_here a:hover {
   background: #FFED00;
   text-indent: -999999px;
   overflow: hidden;
-}
-.header {
-  position: absolute;
-  width: 100%;
-  height: 80px;
-  z-index: 13;
-}
-.logo {
-  position: absolute;
-  margin-top: 76px;
-  margin-left: 48px;
-  width: 50px;
-  z-index: 14;
-}
-.logo img {
-  display: block;
-  width: 46px;
-  height: 57px;
-}
-.header__logo-space {
-  float: left;
-  width: 110px;
-  height: 80px;
-}
-.header__nav-button-space {
-  float: left;
-  width: 1256px;
-}
-.header__nav-space {
-  margin-left: 110px;
-  position: absolute;
-  width: 100vw;
-  height: 80px;
-  z-index: 19;
-  background: #2d2a26;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 2.5% 100%);
-}
-.header__nav {
-  float: right;
-  width: 800px;
-  height: 80px;
-}
-.header__nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  padding-left: 80px;
-}
-.header__nav ul li a,
-.header__nav ul li a:hover {
-  padding: 0 47px 0 43px;
-  margin-right: -48px;
-  display: block;
-  float: left;
-  height: 80px;
-  font: 14px 'Intro';
-  text-transform: uppercase;
-  color: #fff;
-  text-decoration: none;
-  line-height: 80px;
-  -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
-  clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
-}
-.header__nav ul li a:hover,
-.header__nav ul li a:hover:hover {
-  color: #FFED00;
-}
-.nav-active {
-  -webkit-clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
-  clip-path: polygon(0 0, 60% 0, 100% 100%, 40% 100%);
-  color: #2d2a26 !important;
-  background: #FFED00;
-  font-weight: bold !important;
-}
-.header__nav-button-space__promo {
-  margin-top: 16px;
-  float: right;
-  width: 192px;
-  height: 46px;
-  background: #FFED00;
-  -webkit-clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
-  clip-path: polygon(0 0, 85% 0, 100% 100%, 15% 100%);
-}
-.header__nav-button-space__promo:before {
-  position: absolute;
-  margin: 1px 1px 1px 1px;
-  display: block;
-  width: 190px;
-  height: 44px;
-  background: #2d2a26;
-  content: "Promo portal";
-  -webkit-clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
-  clip-path: polygon(0.5% 0, 85% 0, 99.5% 100%, 15% 100%);
-  font: 14px 'Intro';
-  color: #FFED00;
-  text-align: center;
-  line-height: 45px;
-  text-transform: uppercase;
-}
-.header__nav-button-space__promo:hover:before {
-  color: #2d2a26;
-  background: #FFED00;
 }
 /*
 LESS variables are information about icon's compiled state, stored under its original file name
