--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -112,7 +112,7 @@ h2, p {
 
 // animation
 
-a, a:hover, .header__nav-button-space__promo:before {
+a, a:hover, .header__nav-button-space__promo:before, .header {
 	transition: all 0.5s ease-in-out !important;
 }
 
