--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -32,12 +32,15 @@ html(lang='ru')
 
     // /main slider
 
-    .container(style="height: 90vh;")
+    // services
+
+    include ../blocks/services/services.pug
+
+    // /services
 
     // scripts
 
     script(src='../js/jquery-3.2.1.min.js')
-    script(src='../js/jquery-ui.min.js')
     script(src='../js/responsiveslides.min.js')
     script(src='../js/jquery.bpopup.min.js')
     script(src='../js/scripts.js')
