--- a/dev/blocks/services/services.pug
+++ b/dev/blocks/services/services.pug
@@ -164,8 +164,10 @@
 
                         .icon.icon-foodtruck
 
-                        a(href="#" title="")
-                            | Read more
+                        p
+                            | Great way to engage with your<br/>
+                            span
+                                | audience in a fresh and foodie
 
                 // item
 
