--- a/dev/blocks/services/services.pug
+++ b/dev/blocks/services/services.pug
@@ -4,6 +4,11 @@
 
     .container.service-middle
 
+        // button close
+
+        a.btn-close(href="#" title="")
+            .icon.icon-plus
+
         // title block
 
         h3.title-block
