fixed index page, added animatation for elements

--- a/dev/blocks/main-slider/main-slider.pug
+++ b/dev/blocks/main-slider/main-slider.pug
@@ -23,9 +23,9 @@
                 li
                     // mask
                     .main-slider__container__mask
-                        h2
+                        h2.wow.fadeIn
                             | WE ARE BANANAS,<br/>CRAFTSMEN OF<br/>EXPERIENCES
-                        p
+                        p.wow.fadeIn(data-wow-delay="1s")
                             | We forge connections between brand and people.
 
                 // item
