--- a/dev/blocks/services/services.pug
+++ b/dev/blocks/services/services.pug
@@ -29,7 +29,7 @@
 
                 // item
 
-                .services-items__column__item.services-items__one.services-items__column__item_active
+                .services-items__column__item.services-items__one.services-items__column__item_active.wow.fadeIn
 
                     // content
 
@@ -49,7 +49,7 @@
 
                 // item
 
-                .services-items__column__item
+                .services-items__column__item.wow.fadeIn(data-wow-delay="0.5s")
 
                     // content
 
@@ -67,7 +67,7 @@
 
                 // item
 
-                .services-items__column__item.services-items__two
+                .services-items__column__item.services-items__two.wow.fadeIn(data-wow-delay="1s")
 
                     // content
 
@@ -91,7 +91,7 @@
 
                 // item
 
-                .services-items__column__item.services-items__three.more
+                .services-items__column__item.services-items__three.more.wow.fadeIn(data-wow-delay="1.5s")
 
                     // content
 
