--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -8,9 +8,10 @@ html(lang='ru')
     //link(rel="icon" type="image/png" href="../img/favicons/16x16.png" sizes="16x16")
     //link(rel="icon" type="image/png" href="../img/favicons/32x32.png" sizes="32x32")
     //link(rel="icon" type="image/png" href="../img/favicons/96x96.png" sizes="96x96")
-    title Page
+    title Test task for Mindesign
     //link(rel='stylesheet', href='../styles/bootstrap.css')
     link(rel='stylesheet', href='../styles/normalize.css')
+    link(rel='stylesheet', href='../styles/animate.css')
     link(rel='stylesheet', href='../styles/style.css')
 
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -43,6 +44,7 @@ html(lang='ru')
     script(src='../js/jquery-3.2.1.min.js')
     script(src='../js/responsiveslides.min.js')
     script(src='../js/jquery.bpopup.min.js')
+    script(src='../js/wow.min.js')
     script(src='../js/scripts.js')
 
     // / scripts
